<resources>
    <string name="app_name">Time Table</string>
    <string name="time_table_of_winter_semester_2021">Time Table of winter semester 2021</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="time_table">Time Table</string>
    <string name="monday">Monday</string>
    <string name="it_215_system_software">IT-215 System software</string>
    <string name="el_213_analog_circuits">EL-213 Analog circuits</string>
    <string name="sc_209_enviromental_studies">SC-209 Environmental studies</string>
    <string name="lectures">Lectures</string>
    <string name="back">back</string>
    <string name="lab">Lab</string>
    <string name="_12_00_13_15">12:00  13:15</string>
    <string name="_8_30_9_45">8:30  9:45</string>
    <string name="ct_215">CT-215</string>
    <string name="_10_15_11_30">10:15  11:30</string>
    <string name="_14_00_16_00">14:00 16:00</string>
    <string name="el_213">EL-213</string>
    <string name="ct_215_analog_communication_and_transmission_line_theory">CT-215 Analog communication and transmission line theory</string>
    <string name="sc_221_engineered_materials">SC-221 Engineered materials</string>
    <string name="tuesday">Tuesday</string>
    <string name="sc_209_engineered_materials">SC-209 Engineered materials</string>
    <string name="wednesday">Wednesday</string>
    <string name="sc_222">SC-222</string>
    <string name="sc_201_introductory_computational_physics">SC-201 Introductory computational physics</string>
    <string name="sc_222_probability_statistics_and_information_theory">SC-222 Probability statistics and information theory</string>
    <string name="sc_209_environmental_studies">SC-209 Environmental studies</string>
    <string name="thursday">Thursday</string>
    <string name="ct_215_analog_communications_and_transmission_line_theory">CT-215 Analog communications and transmission line theory</string>
    <string name="friday">Friday</string>

    <string name="cs_201">CS-201</string>
    <string name="it_215">IT-215</string>
    <string name="_9_00_12_00">9:00 12:00</string>
    <string name="saturday">Saturday</string>

</resources>