<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/time_table"
        android:textColor="#00695C"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allan"
            android:onClick="b1"
            android:text="@string/mon"
            app:backgroundTint="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:rippleColor="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allan"
            android:onClick="b2"
            app:backgroundTint="@color/teal_700"
            android:text="@string/tue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allan"
            android:onClick="b3"
            android:text="@string/wed"
            app:backgroundTint="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allan"
            android:onClick="b4"
            android:text="@string/thu"
            app:backgroundTint="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allan"
            android:onClick="b5"
            android:text="@string/fri"
            app:backgroundTint="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/allan"
            android:onClick="b6"
            android:text="@string/sat"
            app:backgroundTint="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>